<resources>
    <string name="app_name">MOBILE SALESPERSON</string>
    <string name="title_activity_main">MOBILE SALESPERSON</string>
    <string name="external_dir">GetSignature</string>
    <string name="imgDesc">no description</string>
    <string name="userNameHint">Salesperson Code</string>
    <string name="pswdHint">Password</string>
    <string name="adminPswdHint">Enter Admin Password</string>
    <string name="sltCustHint">Search Customer</string>
    <string name="sltItmHint">Search Item No. (OR) Item Name</string>
    <string name="sltOrdSearchHint">Search Order No. (OR) Customer Name</string>
    <string name="loginBtnStr">Login</string>
    <string name="ordEntryMnuBtnStr">Order Entry</string>
    <string name="invoicEntryMnuBtnStr">Invoice Entry</string>
    <string name="receiptsMnuBtnStr">Receipt</string>
    <string name="addCustMnuBtnStr">Add Customer</string>
    <string name="settingsMnuBtnStr">Setting</string>
    <string name="aboutUsMnuBtnStr">About Us</string>
    <string name="setTaxBtnStr">Set Tax</string>
    <string name="cancelBtnStr">Cancel</string>
    <string name="okBtnStr">OK</string>
    <string name="nextBtnStr">Next</string>
    <string name="finishBtnStr">Finish</string>
    <string name="saleBtnStr">To-Sale</string>
    <string name="returnBtnStr">To-Return</string>
    <string name="testconnectionBtnStr">TC</string>
	<string name="loadSummary">Load</string>
    <string name="mainMenu">Main Menu</string>
    <string name="themeMenu">Theme Menu</string>
    <string name="footerTxtStr">www.ci.com</string>
    <string name="infoTxtStr">Info</string>
    <string name="companyInfoTxtStr">Company Information</string>
    <string name="companyNameTxtStr">Company Name</string>
    <string name="companyContactTxtStr">Contact</string>
    <string name="custInfoTxtStr">Customer Information</string>
    <string name="salesPersonInfoTxtStr">Sales Person Information</string>
    <string name="custNumTxtStr">Customer No.</string>
    <string name="custNameTxtStr">Name</string>
    <string name="custAddTxtStr">Address</string>
    <string name="custCityTxtStr">City</string>
    <string name="custStateTxtStr">State</string>
    <string name="custZipTxtStr">Zip/Postal Code</string>
    <string name="custCountryTxtStr">Country</string>
    <string name="custPhoneTxtStr">Phone</string>
    <string name="custEmailTxtStr">Email</string>
    <string name="custWebTxtStr">Website</string>
    <string name="itmInfoTxtStr">Item Information</string>
    <string name="itmNumTxtStr">Item No.</string>
    <string name="itmDescTxtStr">Desc.</string>
    <string name="itmPrcLstTxtStr">Price List</string>
    <string name="itmPrcTxtStr">Price</string>
    <string name="itmCrncyTxtStr">Currency</string>
    <string name="itmPrcDeptTxtStr">Price Det. By</string>
    <string name="itmUOMTxtStr">UOM</string>
    <string name="itmHandTxtStr">Item on Hand</string>
    <string name="itmCostMtdTxtStr">Costing Method</string>
    <string name="itmAltTxtStr">Alternate Item</string>
    <string name="itmAltDescTxtStr">Alternate Desc</string>
    <string name="itmLocTxtStr">Location</string>
    <string name="addNewCustTxtStr">Add New Customer</string>
    <string name="addCustGpCdTxtStr">Group Code</string>
    <string name="addCustTmsCdTxtStr">Terms Code</string>
    <string name="addCustTypTxtStr">Customer Type</string>
    <string name="addCustCmtTxtStr">Comment</string>
    <string name="shipToLocDetTxtStr">Ship-To Location Details</string>
    <string name="shipToCusNmTxtStr">Customer Name</string>
    <string name="shipToLocTxtStr">Ship-To Location</string>
    <string name="shipToViaTxtStr">Ship-To Via</string>
    <string name="shipDtTxtStr">Ship Date</string>
    <string name="shipNoteTxtStr">Note: You cannot alter Ship-To Location and Ship Via</string>
    <string name="shipNoteTxtStrContinue">after selecting an Item.</string>
    <string name="signBelow">Please sign below.</string>
    <string name="itmEntryTxtStr">Item Entry</string>
    <string name="itmEntryTxtNumber">Item</string>
    <string name="itmEntryTxtDesc">Description</string>
    <string name="itmEntryTxtCurrency">Currency</string>
    <string name="itmEntryTxtPriceList">Price List</string>
    <string name="itmEntryTxtQty">Quantity</string>
    <string name="itmEntryTxtQtyHand">Qty on Hand</string>
    <string name="itmEntryTxtUnitPrice">Unit Price</string>
    <string name="itmEntryTxtBasePrice">Base Price</string>
    <string name="itmEntryTxtDiscount">Discount</string>
    <string name="itmEntryTxtLoc">Location</string>
    <string name="itmEntryTxtUom">UOM</string>
    <string name="itmEntryTxtShipDate">Ship Date</string>
    <string name="transTitle">Transaction</string>
    <string name="txtTransCusName">Customer Name</string>
    <string name="txtAddtoSale">Add to Sale</string>
    <string name="txtCusNameEdit">Edit</string>
    <string name="txtAddtoReturn">Add to Return</string>
    <string name="txtTransEntryType">Entry Type</string>
    <string name="txtTransScanItem">Scan Item</string>
    <string name="txtTransRadioNum">Num</string>
    <string name="txtTransRadioUPC">UPC</string>
    <string name="txtTransTableTitleNum">Number</string>
    <string name="txtTransTableTitleQty">Qty</string>
    <string name="txtTransTableTitleExPrice">Ext.Price</string>
    <string name="txtTransTableTitleLoc">Location</string>
    <string name="txtTransTableTitleUom">UOM</string>
    <string name="txtTransInvoiceTotal">Invoice Total</string>
    <string name="txtTransDiscount">Discount</string>
    <string name="txtTransTotalQty">Total Qty</string>
    <string name="txtTransTax">Tax</string>
    <string name="txtTransPreTax">Pre-Tax</string>
    <string name="txtTransNetAmt">Net Amount</string>
    <string name="txtTransSign">Sign</string>
    <string name="txtTransAddItm">Add</string>
    <string name="txtTransFinish">Finish</string>
    <string name="txtTransCancel">Cancel</string>
    <string name="txtPayTitle">Prepayment</string>
    <string name="txtPayCusNo">Customer No.</string>
    <string name="txtPayCusName">Customer Name</string>
    <string name="txtPayDiscAvail">Disc Avail</string>
    <string name="txtPayOrdTotal">Order Value</string>
    <string name="txtPayAmtDue">Amount Due</string>
    <string name="txtPayChkNo">Check/Receipt No.</string>
    <string name="txtPayRecptAmt">Receipt Amount</string>
    <string name="txtPaymentCode">Payment Mode</string>
    <string name="txtSelectLocation">Select Location</string>
    <string name="txtSelectPriceList">Select PriceList</string>
    <string name="txtSelectCompany">Select Company</string>
    <string name="txtSelectExportTypes">Select Export Types</string>
	<string name="txtPayCodeDesc">Description</string>
    <string name="txtPayRecptDate">Receipt Date</string>
    <string name="txtOrdSearchTableTitleNum">Doc.No.</string>
    <string name="txtOrdSearchTableTitleRef">Reference No.</string>
    <string name="txtOrdSearchTableTitleCusName">Customer Name</string>
    <string name="receiptTitle">Receipt</string>
    <string name="txtRecptCusNo">Cust No.</string>
    <string name="txtRecptCusAmt">Customer Amount</string>
    <string name="txtRecptCusUnapplied">Customer Unapplied</string>
    <string name="txtReciptTableTitleApply">Apply</string>
    <string name="txtRecptPendingTotal">Total</string>
    <string name="txtReciptTableTitleApplyAmt">Applied Amt</string>
    <string name="txtReciptTableTitlePendingAmt">Pending Amt</string>
    <string name="txtReciptTableTitleNetAmt">Net Amt</string>
    <string name="txtSettingTitle">Setting</string>
    <string name="txtSettingPrint">No.of copies to print</string>
    <string name="txtSettingAutoSave">No.of items for auto save</string>
    <string name="txtSettingTotalPieceDisc">Total piece for discount</string>
    <string name="txtSettingDiscPrice">Discount Price</string>
    <string name="txtSettingDateFormat">Select Date Format</string>
    <string name="txtSettingDecimalFormat">Select Decimal Format</string>
    <string name="txtSettingSyncAccnt">Data Sync Account</string>
    <string name="txtSettingMspServerPath">MSP Server Path</string>
    <string name="txtSettingSelectPrinter">Select Printer</string>
    <string name="txtSettingShowShipment">Show Shipment Screen</string>
    <string name="txtSettingShowPrepayment">Show Prepayment Screen</string>
    <string name="txtSettingAutoReport">Auto Report Generation</string>
    <string name="txtSettingCustomerNameEdit">Customer Name Editable during Print</string>
    <string name="txtSequenceReceiptNo">Next Receipt Number</string>
    <string name="txtSequencePrepaymentNo">Next Prepayment No.</string>
    <string name="aboutTitle">Mobile SalesPerson</string>
	<string name="ordEntryMove">Order | Invoice Entry on the Move</string>
	<string name="aboutContent1">Mobile SalesPerson for Android</string>
	<string name="aboutContent2">Integrating with Sage 300 ERP</string>
	<string name="warning">Warning: This mobile application is protected by copyright law and international treaties. Unauthorized reproduction or distribution of this program, or any portion of it, may result in service civil and criminal penalties, and will be prosecuted to the maximum extent possible under the law.</string>
	<string name="txtBuildDate">Release Date: 11/04/2019</string>
	<string name="txtUpdatedDate">Updated Date: 12/16/2019</string>
	<string name="txtTransDetailTitle">Transaction - Detail</string>
	<string name="txtTransRefNo">Ord.Ref.</string>
	<string name="txtTransNo">Ord.No.</string>
	<string name="txtTransDate">Date</string>
	<string name="txtTransTerms">Terms</string>
	<string name="txtTransCustNo">Customer</string>
	<string name="txtTransSalesPerson">Sales Person</string>
	<string name="txtTransMailTo">Mail To</string>
	<string name="txtTransDetailTableSNo">S.No.</string>
	<string name="txtTransDetailDiscAmt">Disc.Amt.</string>
	<string name="txtTransDetailStatus">Status</string>
	<string name="txtTransSummaryTitle">Transaction Summary</string>
	<string name="txtReceiptSummaryTitle">Receipt Summary</string>
	<string name="txtTransSummaryFrom">From Date</string>
	<string name="txtTransSummaryTo">To Date</string>
	<string name="txtTransSummaryDocRefNo">Document Ref. No.</string>
	<string name="txtTransSummaryTotal">Total</string>
	<string name="txtInventoryTitle">Inventory Report</string>
	<string name="txtInventoryLocation">Select Location</string>
	<string name="txtInventoryItemNo">Item No.</string>
	<string name="txtCustomerTax">Customer Tax</string>
	<string name="txtCustomerTaxGrp">Tax Group</string>
	<string name="txtCustomerTaxAuthority">Tax Authority</string>
	<string name="txtCustomerTaxClass">Tax Class</string>
	<string name="txtTransDetailCustNo">Cus.No.</string>
	<string name="txtExportOrdNo">Order Ref.No.</string>
	<string name="txtExportOrdInvs">Orders/Invoices</string>
	<string name="txtExportSelectAll">Select All</string>
	<string name="txtExportTitle">Export</string>
	<string name="txtSequenceTitle">MSP Sequence Number</string>
  <string name="txtPayApplyBy">Apply By</string>
  <string name="txtPayApplyTo">Apply To</string>
  <string name="txtPrePayAmt">Prepayment Amount</string>
  <string name="txtBankCode">Bank Code</string>
  <string name="txtPrePayNo">Prepayment No</string>
  <string name="txtPrePayDate">Prepayment Date</string>
  <string name="txtPrePayComment">Prepayment Comment</string>
  <string name="txtPaySave">Save</string>
  <string name="txtEmailSettingTitle">Email Settings</string>
  <string name="txtSalespersonEmail">Salesperson Email</string>
  <string name="txtSalespersonPassword">Salesperson Password</string>
  <string name="txtCompanyEmail">Company Email</string>
  <string name="txtSalespersonHostName">Salesperson Hostname</string>
  <string name="txtSalespersonPortNo">Downloading PortNumber</string>
  <string name="txtCompanyPortNo">Sending PortNumber</string>
  <string name="emailSave">Save</string>
</resources>