<?xml version="1.0" encoding="utf-8"?>
<!--
    @designed by T.SARAVANAN 
-->

<!-- Parent Relative layout with vertical orientation -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="?pageBackground"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_ShiptoTitle"
        style="?pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/shipToLocDetTxtStr" />
	
    <!-- Child linear layout 1 with horizontal orientation -->
    <LinearLayout
        android:id="@+id/lay_ShipToCusName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_ShiptoTitle"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            style="?textRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/shipToCusNmTxtStr" />

        <TextView
            android:id="@+id/txt_ShipToCusNm"
            style="?textRetriever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <!-- Line between title and chile Linear layout 2 -->	
    <View
        android:id="@+id/view_line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/lay_ShipToCusName"
        style="?PageLine"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="2dp" />

    <!-- Child linear layout 2 with vertical orientation -->
    <LinearLayout
        android:id="@+id/lay_ShipEntryField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line1"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            style="?textRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/shipToLocTxtStr" />

        <Spinner
            android:id="@+id/spn_ShipToLocDet"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_margin="2dp" 
            style="@style/SpinnerStyle" />

        <TextView
            style="?textRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/shipToViaTxtStr" />

        <Spinner
            android:id="@+id/spn_ShipToVia"
            style="@style/SpinnerStyle"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_margin="2dp" />

        <TextView
            style="?textRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/shipDtTxtStr" />
		
        <!-- Child linear layout 3 with horizontal orientation -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edtTxt_ShipDt"
                style="@style/EditTxt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:ems="7"
                android:layout_weight="60"
                android:focusable="false"
                android:inputType="date" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40" />
        </LinearLayout>

        <!-- <EditText
            android:id="@+id/edtTxt_ShipDt"
            style="@style/EditTxt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:ems="10"
            android:focusable="false"
            android:inputType="date" >
        </EditText> -->
        
    </LinearLayout>

    <Button
        android:id="@+id/btn_ShipOk"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lay_ShipEntryField"
        android:layout_below="@+id/lay_ShipEntryField"
        android:layout_marginTop="20dp"
        android:drawableRight="@drawable/next"
        android:text="@string/nextBtnStr" 
        style="?buttonStyle" />

    <!-- Child linear layout 4 with vertical orientation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/btn_ShipOk"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_STNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/shipNoteTxtStr"
            android:textColor="#ffffff"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="10dp"
            android:text="@string/shipNoteTxtStrContinue"
            android:textColor="#ffffff"
            android:textSize="32sp" />
    </LinearLayout>

</RelativeLayout>